Add text referring to DMTN-020

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -62,3 +62,16 @@ title = "{LSST Data Management Organization Charter}",
 howpublished = {LSST Data Management LDM-294},
 url = {https://ls.st/LDM-294},
 }
+
+@techreport{DMTN-020,
+  title        = {{Project Management Guide}},
+  author       = {Jacek Becla and Frossie Economou and Margaret Gelman and
+                  Jeff Kantor and Simon Krughoff and Kevin Long and Fritz Mueller
+                  and John Swinbank and Xiuqin Wu},
+  institution  = {{LSST Data Management}},
+  type         = {{LSST Data Management Technical Note}},
+  number       = {{DMTN-020}},
+  month        = nov,
+  year         = 2016,
+  url          = {https://dmtn-020.lsst.io}
+}
