Retire sphinxincludegraphics command
It was tripping up the lsst-projectmeta-kit processing and is just as
easy to use includegraphics directly.

--- a/LDM-472.tex
+++ b/LDM-472.tex
@@ -9,7 +9,6 @@
 % Set up styles of URL: it should be placed after hyperref.
 \urlstyle{same}
 
-\newcommand*{\sphinxincludegraphics}{\includegraphics}
 \newenvironment
   {sphinxthebibliography}{\begin{thebibliography}}{\end{thebibliography}}
 \newcommand{\printindex}{}
@@ -298,7 +297,7 @@ and transferred to the Primavera when approved (every 6 or 12 months). The Prima
 version is always the authoritative source of truth.
 
 \begin{figure}
-\sphinxincludegraphics[width=\textwidth]{baselinePlanDiagram.png}
+\includegraphics[width=\textwidth]{baselinePlanDiagram.png}
 \end{figure}
 
 The above diagram summarizes what needs to be approved by CCB, what is stored in
