Update change record

--- a/LDM-472.tex
+++ b/LDM-472.tex
@@ -38,6 +38,7 @@
 \addtohist{1.0b}{2016-08-11}{First version}{Jacek Becla}
 \addtohist{1.0c}{2017-02-10}{Approved by DM TCT in \href{https://jira.lsstcorp.org/browse/RFC-201}{RFC-201}}{Tim Jenness}
 \addtohist{1.0}{2017-02-15}{Approved by DM Lead}{Victor Krabbendam}
+\addtohist{n/a}{2020-02-17}{Obsoleted by \jira{RFC-660}. Please refer instead to \href{https://ls.st/LDM-294}{LDM-294}}{Tim~Jenness}
 }
 
 \begin{document}
